<resources>
    <string name="app_name">Manager</string>
    <string name="action_settings">Settings</string>

    <string name="add_item">Add Item</string>
    <string name="save_button">Save</string>
    <string name="enter_item">Enter Item</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="note">Note</string>
    <string name="sure_text">Are you sure?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>

    <!-- login -->
    <string name="action_login">Login</string>
    <string name="sign_up">New User? Sign Up!</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="signup">SignUp</string>
    <string name="forget_password">Forget Password?</string>
    <string name="enter_the_answer">Enter the Answer</string>

    <!-- for spinner -->
    <string-array name="category_names">
        <item> Bank </item>
        <item> Credit-Card </item>
        <item> Internet </item>
        <item> Emails account </item>
        <item> Social Media </item>
        <item> New Category </item>
        <item> Choose Category </item>
    </string-array>

</resources>
