<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/sure_text" />

            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:text="@string/yes_text" />

            <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_marginTop="40dp"
                android:text="@string/no_text" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>