<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:layout_marginBottom="20dp"
                android:cropToPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/etUserName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.163"
                app:srcCompat="@mipmap/ic_launcher_round" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                app:errorEnabled="true"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_edittext"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_edittext"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@android:color/black"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="129dp"
                tools:layout_editor_absoluteY="450dp" />

            <Button
                android:id="@+id/have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@android:color/black"
                android:text="Already have an Account?"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="129dp"
                tools:layout_editor_absoluteY="450dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

